# ood

exam/: exam.sln
exam/exam/: exam.cpp  exam.vcxproj
lab10/harmonic-functions-visualizer/: jest.config.js  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
lab3/: lab3.sln
lab3/task_3/: DecryptInputStream.h  FileInputStream.h  IOutputDataStream.h  diagram.txt  task_3.vcxproj  task_3.vcxproj.filters
lab3/task_3_tests/: MemoryStream.h  task_3_tests.cpp  task_3_tests.vcxproj.filters
lab3/tasks/: Condiments.h  IBeverage.h  main.cpp
lab4/task_1/: CDesigner.h  CEllipse.h  CPictureDraft.h  CShape.h  Client.h  Ellipse.h  ICanvas.h  IDesigner.h  IPainter.h  IShapeFactory.h  Painter.h  Picture.h  Point.h  (+13 more)
lab6/: lab6.sln
lab8/: lab8.sln
lab9/: lab9.sln
lab_1/PrimeChecker/: CMakeLists.txt  Decode.vcxproj  Decode.vcxproj.filters  PrimeChecker.cpp  PrimeChecker.h  PrimeChecker.sln  main.cpp
lab_3/: lab3.sln
lab_5/: AbstractCommand.cpp  AbstractCommand.h  CommandHandler.h  ConstDocumentItem.h  DeleteCommand.cpp  DeleteCommand.h  Document.cpp  Document.h  DocumentItem.h  History.cpp  History.h  ICommand.h  ICommand_fwd.h  IDocument.h  IImage.h  IParagraph.h  Image.h  InsertImageCommand.cpp  InsertImageCommand.h  InsertParagraphCommand.cpp  InsertParagraphCommand.h  Menu.cpp  Menu.h  Paragraph.h  ReplaceTextCommand.cpp  ReplaceTextCommand.h  ResizeImageCommand.cpp  ResizeImageCommand.h  SaveCommand.cpp  SaveCommand.h  SetTitleCommand.cpp  SetTitleCommand.h  lab_5.sln  lab_5.vcxproj  lab_5.vcxproj.filters  main.cpp  text.txt
lab_6/: lab_6.sln
(+287 files in other folders)
